# personal-qna

./: .gitignore  README.md  app.py  pyproject.toml  utils.py
assets/: styles.css
util/: create_embeddings_vector.py  html2md.py  urls.txt
